# network-technologies-2

lab1/: Cargo.toml
lab1/src/: main.rs
lab2/: Cargo.toml
lab2/src/: client.rs  lib.rs  server.rs
lab3/: .gitignore  Cargo.toml
lab3/assets/: index.html
lab3/src/: geocoding.rs  lib.rs  main.rs  opentrip.rs  tests.rs  types.rs
lab3/templates/: places-results.html  search-results.html
lab4/: Cargo.toml  build.rs  snakes.toml
lab4/proto/: snakes.proto
lab4/src/: bridge.rs  comm.rs  config.rs  game.rs  id.rs  lib.rs  logic.rs  main.rs  master.rs  net.rs  node.rs  normal.rs  proto.rs  state.rs  threads.rs
lab4/src/ui/: grid.rs  input.rs  main.rs  mod.rs  utils.rs  view.rs
lab5/: Cargo.toml  Makefile  callback.c  callback.h  dns.h  dnsqueue.c  dnsqueue.h  epoll.c  epoll.h  main.c  net.c  net.h  panic.h  queue.c  queue.h  socks.c  socks.h  state.c  state.h
lab5/src/: lib.rs  main.rs  pseudocode.rs  socket_ext.rs  types.rs
